Alignment on home page should be fixed now

--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,14 @@ img.pull-left { margin-right: 10px; margin-top: 5px;}
 	color:#78431B;
 }
 
+#link {
+	margin-bottom: 10%;
+}
+
+#fraternalFather {
+	text-decoration: none;
+}
+
 /* Sidebars */
 .sidebar { padding-top:36px; padding-bottom:30px; }
 	.sidebar .widget { margin-bottom:20px; }
